-
Bug
-
Resolution: Done
-
P1: Critical
-
5.6.1
-
None
-
7c5cf8b2bdd49f9f19a6d2db5f5f12372ca6cfca
Crashes with this backtrace:
#0 0x00007f053ea85446 in strlen () from /usr/lib/libc.so.6
#1 0x000000000042d6bf in QLatin1String::QLatin1String (s=0x3600000043 <error: Cannot access memory at address 0x3600000043>, this=<optimized out>)
at ../../../include/QtCore/../../../../../../sources/qt/qt5/qtbase/src/corelib/tools/qstring.h:87
#2 qFormatLogMessage (type=QtWarningMsg, context=..., str=...) at /data/sources/qt/qt5/qtbase/src/corelib/global/qlogging.cpp:1426
#3 0x000000000042dd07 in qDefaultMessageHandler (type=<optimized out>, context=..., buf=...) at /data/sources/qt/qt5/qtbase/src/corelib/global/qlogging.cpp:1532
#4 0x000000000042b8d7 in qt_message_print (msgType=msgType@entry=QtWarningMsg, context=..., message=...) at /data/sources/qt/qt5/qtbase/src/corelib/global/qlogging.cpp:1613
#5 0x000000000042c2b8 in qt_message_output (msgType=QtWarningMsg, context=..., message=...) at /data/sources/qt/qt5/qtbase/src/corelib/global/qlogging.cpp:1660
#6 0x00000000004772d8 in QDebug::~QDebug (this=0x7fffc5027ef0, __in_chrg=<optimized out>) at /data/sources/qt/qt5/qtbase/src/corelib/io/qdebug.cpp:150
#7 0x0000000000437a15 in checkWarnMessage (function=function@entry=0x48d36b "read", what=what@entry=0x48d370 "device not open", device=0x7fffc50280b0)
at /data/sources/qt/qt5/qtbase/src/corelib/io/qiodevice.cpp:87
#8 0x00000000004382db in QIODevice::read (this=this@entry=0x7fffc50280b0, data=0x18f43a8 "\200C\217\001", maxSize=maxSize@entry=12288) at /data/sources/qt/qt5/qtbase/src/corelib/io/qiodevice.cpp:821
#9 0x0000000000438b11 in QIODevice::readAll (this=this@entry=0x7fffc50280b0) at /data/sources/qt/qt5/qtbase/src/corelib/io/qiodevice.cpp:1014
#10 0x000000000040a58b in Moc::parsePluginData (this=this@entry=0x7fffc5028770, def=def@entry=0x7fffc5028160) at /data/sources/qt/qt5/qtbase/src/tools/moc/moc.cpp:1202
#11 0x000000000040aeeb in Moc::parse (this=this@entry=0x7fffc5028770) at /data/sources/qt/qt5/qtbase/src/tools/moc/moc.cpp:702
#12 0x000000000042a059 in runMoc (argc=<optimized out>, argv=<optimized out>) at /data/sources/qt/qt5/qtbase/src/tools/moc/main.cpp:415
#13 0x00007f053ea25291 in __libc_start
when running make a second time it works.
Will try to get a valgrind trace